scss/main.scss
@use "bootstrap-icons/font/bootstrap-icons";
@import "bootstrap/scss/functions";
@import "bootstrap/scss/variables";

$primary: #39B54A;
$theme-colors: map-merge($theme-colors, (
  "primary": $primary
));


@import "bootstrap/scss/bootstrap";


$primary-color: $primary;
$primary-fg-color: #ffffff;
$secondary-color: #3966b5;
$tertiary-color: #B539A4;
$quaternary-color: #B58839;
$footer-grey-400: #f8f9fa;
$footer-grey-600: darken($color: $footer-grey-400, $amount: 5%);



.sponsor .logo {
    width: 275px;
    height: 80px;
}


header.news {
    background-color: $primary-color; 

    div {
        text-align: right;

        .btn.btn-link {
            color: $primary-fg-color;
            text-decoration: none;

            &:hover {
                color: $primary-fg-color;
                text-decoration: underline;
            }
        }
    }
}

footer {
    background-color: $footer-grey-600;

    &.sponsors {
        background-color: $footer-grey-400;

    }

    ul {
        padding: 0;
        margin: 0;
    }

    li {
        list-style: none;
        display: inline-block;

        // text-align: center;
    }
    
    p, h3 {
        color: darken($color: #f8f9fa, $amount: 40%)
    }

    h3 {
        font-size: 1em;
    }

    &.contact {
        padding: 1em;

        li {
          display: block;
          font-size: 0.8em;

          a {
            color: darken($color: $primary, $amount: 10%);
            text-decoration: none;

            &:hover {
              text-decoration: underline;
            }
          }
        }

    }
}

main {
    .partner.logo {
        align-content: right;
        width: 60px;
        height: 60px;   
    }

    .back {
        text-align: center;

        .btn {
            color: $primary-fg-color;
        }
    }

    h1 {
        font-weight: bolder;
    }

    ul.events {
        li {
            list-style: none;
            font-size: 1.2em;
            
            &::before {
                font-family: bootstrap-icons, sans-serif;
                content: "\F214";

                // font-size: 1.2em;
                margin-right: .5em;
                color: $primary-color;
            }

            a {
                font-weight: bolder;
                color: $primary-color;
                text-decoration: none;

                &:hover {
                    text-decoration: underline;
                }
            }

            .event-date::after {
                content: ": ";
            }

            i.bi {
                color: $primary-color;
            }
        }
    }

    article {
        @extend .px-5;

        // @extend .py-3;

        margin-top: 1em;

        a {
            color: $primary-color;
            text-decoration: none;

            &:hover {
                text-decoration: underline;
            }
        }

        h1, h2 a {
            color: #000000;

            // font-weight: bold;
            // font-style: italic;
            text-decoration: none;

            &::before {
                font-family: bootstrap-icons, sans-serif;
                content: "\F521";
                margin-right: .5em;
                text-decoration: none;
            }

            &:hover {
                text-decoration: none;
            }
        }
    }

    h3 {
        font-weight: 300;
        text-align: center;
        margin-bottom: 2em;
    }

   card.partner {
        @extend .row;
        
        min-height: 10em;
        align-items: center;
        margin-bottom: 3em;

        // border: 1px solid #000000;
        border-radius: 5px;
        box-shadow: darken(#f8f9fa, 5) 0 15px 10px 0;  


        div {
            // border: #000000 1px solid;
            padding: 1em;
        }

        .partnerlogo {
            @extend .col-md-5;
            
            object-fit: contain;
            text-align: center;

            .logo {
                object-fit: contain;
                margin-right: 1em;
                margin-bottom: 1em;
                height: 90px;

                &:first-child:last-child {
                    margin-right: 0;
                    margin-bottom: 0;
                }

                &.lnu {
                    height: min(56px, auto);
                    width: min(347px, 90%);
                }

                &.treetree2 {
                    height: min(38px, auto);
                    width: min(290px, 90%);
                }

                &.piwgroep {
                    height: min(90px, auto);
                    width: min(90%, 347px);

                }

                &.swalmenroer {
                    background-color: #000000;
                    padding: 5px;
                    height: min(90px, auto);
                    width: min(80%, 298px);
                }

                &.aevv {
                    background-color: #21a9de;
                    padding: 5px;
                }
            
            }
        }

        .partnerinfo {
            @extend .col-md-7;
            @extend .col-sm-12;

            text-align: left;

            h3 {
                font-weight: 600;
                font-size: 1.6em;
            }

            .country {
                font-weight: 300;
                font-size: 1.2em;
                font-style: oblique;

            }

            .teamlead {
                font-size: 1.2em;

                a {
                    color: $primary-color;
                    text-decoration: none;

                    &:hover {
                        text-decoration: underline;
                    }
                }
            }

            .contributors {
                font-weight: 300;
                font-size: 0.9em;
                color: darken($footer-grey-400, 30);
                margin-bottom: 0;

                &::before {
                    content: "Other members";
                }
            }

            ul {
                padding: 0;
                margin: 0;
            }

            li {
                list-style: none;
                font-size: 1em;
                
            }
        }
   }
}

.partners {
    object-fit: contain;

    .logo {
    height: 60px;
    margin-top: 2em;
    margin-right: 1.5em;
    object-fit: contain;

    &.zhaw {
        width: 60px;    
    }
  
    &.ounl {
        width: 168px;
    } 

    &.urjc {
        width: 168px;
    }

    &.cgl, &.thk {
        width: 111;
    }

    &.lnu {
        object-fit: contain;
        height: 50px
    }

    &.piwgroep {
        height: 60px;
        width: 231px;
    }

    &.treetree2 {
        height: 40px;
        width: 216px;    
    }

    &.swalmenroer {
        height: 50px;
        width: 180px;
        background-color: #000000;
        padding: 5px;
    }

    &.colegioatlantico {
        width: 81px;
    }

    &.kodcentrum {
        width: 152px;
    }

    &.aeffl {
        width: 96px;
    }

    &.aevv {
        background-color: #21a9de;
        padding: 5px;
    }

    }

    a {
        text-decoration: none;
        color: $primary-color;
        display: inline-block;
        max-width: 20em;
    }
}

